adicao de todas as noticias e suas respectivas paginas de descricao

--- a/paginas/noticiasPage.html
+++ b/paginas/noticiasPage.html
@@ -23,7 +23,7 @@
                     <a href="../index.html">
                         <div class="list-icons">
                             <img src="../icones/dashboard_16181907.png" alt="">
-                            <li>Home</li>
+                            <li>Página Inicial</li>
                         </div>
                     </a>
                     <a href="homeActivitiesPage.html">
@@ -48,38 +48,85 @@
     
 
     <main>
-        <a href="noticiasDetails/odiaemqueaterraparou.html" class="noticia-link">
+        <a href="noticiasDetails/ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA.html" class="noticia-link">
             <section class="noticia noticia-retraida">
                 <div class="noticia-componentes">
                     <div class="noticia-imagem">
-                        <img src="../imagens/1749555959361.jpg" alt="">
+                        <img src="../imagens/IMG-20250705-WA0002.jpg" alt="">
                     </div>
                     <div class="noticia-texto">
                         <div class="texto">
-                            <h2>O dia em que a terra parou!</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore neque id ipsum unde architecto excepturi...</p>
+                            <h2>ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA...</h2>
                         </div>
                     </div>
                 </div>
             </section>
         </a>
 
-        <a href="" class="noticia-link">
+        <a href="noticiasDetails/NACAJ MARCA PRESENÇA EM ENCONTRO ESTRATÉGICO DO FÓRUM DAS ASSOCIAÇÕES.html" class="noticia-link">
             <section class="noticia noticia-retraida">
                 <div class="noticia-componentes">
                     <div class="noticia-imagem">
-                        <img src="../imagens/1749555959361.jpg" alt="">
+                        <img src="../imagens/IMG-20250702-WA0005.jpg" alt="">
                     </div>
                     <div class="noticia-texto">
                         <div class="texto">
-                            <h2>O dia em que a terra parou!</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore neque id ipsum unde architecto excepturi...</p>
+                            <h2>NACAJ MARCA PRESENÇA EM ENCONTRO ESTRATÉGICO DO FÓRUM DAS ASSOCIAÇÕES DA...</h2>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </a>
+
+        <a href="noticiasDetails/COMUNIDADE E GOVERNO SE ENCONTRAM EM NAMACURRA.html" class="noticia-link">
+            <section class="noticia noticia-retraida">
+                <div class="noticia-componentes">
+                    <div class="noticia-imagem">
+                        <img src="../imagens/IMG-20250701-WA0004.jpg" alt="">
+                    </div>
+                    <div class="noticia-texto">
+                        <div class="texto">
+                            <h2>COMUNIDADE E GOVERNO SE ENCONTRAM EM NAMACURRA PARA...</h2>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </a>
+
+        <a href="noticiasDetails/NACAJ FORTALECE LAÇOS COM O GOVERNO DISTRITAL DE NAMACURRA.html" class="noticia-link">
+            <section class="noticia noticia-retraida">
+                <div class="noticia-componentes">
+                    <div class="noticia-imagem">
+                        <img src="../imagens/IMG-20250627-WA0017.jpg" alt="">
+                    </div>
+                    <div class="noticia-texto">
+                        <div class="texto">
+                            <h2>NACAJ FORTALECE LAÇOS COM O GOVERNO DISTRITAL DE NAMACURRA...</h2>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </a>
+
+        <a href="noticiasDetails/DELEGAÇÃO DO NACAJ DE QUELIMANE PARTICIPOU DO TREINAMENTO.html" class="noticia-link">
+            <section class="noticia noticia-retraida">
+                <div class="noticia-componentes">
+                    <div class="noticia-imagem">
+                        <img src="../imagens/IMG-20250712-WA0006.jpg" alt="">
+                    </div>
+                    <div class="noticia-texto">
+                        <div class="texto">
+                            <h2>DELEGAÇÃO DO NACAJ DE QUELIMANE PARTICIPOU DO TREINAMENTO...</h2>
                         </div>
                     </div>
                 </div>
             </section>
         </a>
     </main>
+
+    <footer>
+        <p>© 2025 NACAJ</p>
+    </footer>
 
     <script src="../javascript/header.js"></script>
 </body>
