--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="index.html">
                         <div class="list-icons">
                             <img src="icones/dashboard_16181907.png" alt="">
-                            <li>Home</li>
+                            <li>Página Inicial</li>
                         </div>
                     </a>
                     <a href="paginas/homeActivitiesPage.html">
