adicao do cabecalho nas paginas das noticias para cada uma das noticias e tambem a criacao da seta para voltar para a pagina principal das noticias

--- a/paginas/homeActivitiesPage.html
+++ b/paginas/homeActivitiesPage.html
@@ -51,7 +51,7 @@
             <section id="imagem">
                 <div>
                     <h1>NACAJ</h1>
-                    <p>(Nucleo de Apoio a Criancas Adolescentes e Jovens)</p>
+                    <p>(Nucleo de Apoio as Criancas Adolescentes e Jovens)</p>
                 </div>
             </section>
             <section id="caixa-mae">
