--- a/paginas/noticiasDetails/ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA.html
+++ b/paginas/noticiasDetails/ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA.html
@@ -3,12 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NACAJ | Noticias</title>
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/noticias.css">
+    <link rel="stylesheet" href="../../css/innerHeader.css">
     <link rel="stylesheet" href="../../css/headerStyle.css">
+    <script defer src="../../javascript/header.js"></script>
+
 </head>
 <body>
+
+    <header>
+        <section id="homePageHeader">
+            <a href="../noticiasPage.html">
+                <div class="seta-back">
+                    <div class="seta"></div>
+                </div>
+            </a>
+            <div id="homeLogo">
+                <img src="../../icones/logoNACAJalinhado.png" alt="">
+                <h2>NACAJ</h2>
+            </div>
+            <nav>
+                <ol id="nav-list" class="retracted">
+                    <a href="../../index.html">
+                        <div class="list-icons">
+                            <img src="../../icones/dashboard_16181907.png" alt="">
+                            <li>Página Inicial</li>
+                        </div>
+                    </a>
+                    <a href="../homeActivitiesPage.html">
+                        <div class="list-icons">
+                            <img src="../../icones/checklist_7111148.png" alt="">
+                                                <li>Atividades</li>
+                        </div>
+                </a>
+                    <a href="../noticiasPage.html">
+                        <div class="list-icons">
+                            <img src="../../icones/world_2298220.png" alt="">
+                            <li>Noticias</li>
+                        </div>
+                    </a>
+                </ol>
+            </nav>
+            <button id="menu">
+                <div class="hamburguer"></div>
+            </button>
+        </section>
+    </header>
+
     <main>
         <img src="../../imagens/IMG-20250705-WA0002.jpg" alt="">
 
