--- a/paginas/noticiasDetails/DELEGAÇÃO DO NACAJ DE QUELIMANE PARTICIPOU DO TREINAMENTO.html
+++ b/paginas/noticiasDetails/DELEGAÇÃO DO NACAJ DE QUELIMANE PARTICIPOU DO TREINAMENTO.html
@@ -7,8 +7,47 @@
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/noticias.css">
     <link rel="stylesheet" href="../../css/headerStyle.css">
+    <link rel="stylesheet" href="../../css/innerHeader.css">
 </head>
 <body>
+    <header>
+        <section id="homePageHeader">
+            <a href="../noticiasPage.html">
+                <div class="seta-back">
+                    <div class="seta"></div>
+                </div>
+            </a>
+            <div id="homeLogo">
+                <img src="../../icones/logoNACAJalinhado.png" alt="">
+                <h2>NACAJ</h2>
+            </div>
+            <nav>
+                <ol id="nav-list" class="retracted">
+                    <a href="../../index.html">
+                        <div class="list-icons">
+                            <img src="../../icones/dashboard_16181907.png" alt="">
+                            <li>Página Inicial</li>
+                        </div>
+                    </a>
+                    <a href="../homeActivitiesPage.html">
+                        <div class="list-icons">
+                            <img src="../../icones/checklist_7111148.png" alt="">
+                                                <li>Atividades</li>
+                        </div>
+                </a>
+                    <a href="../noticiasPage.html">
+                        <div class="list-icons">
+                            <img src="../../icones/world_2298220.png" alt="">
+                            <li>Noticias</li>
+                        </div>
+                    </a>
+                </ol>
+            </nav>
+            <button id="menu">
+                <div class="hamburguer"></div>
+            </button>
+        </section>
+    </header>
     <main>
         <img src="../../imagens/IMG-20250712-WA0006.jpg" alt="">
 
@@ -37,5 +76,6 @@
     <footer>
         <p>© 2025 NACAJ</p>
     </footer>
+    <script src="../../javascript/header.js"></script>
 </body>
 </html>
