adicao de duas noticias nacaj recebe jovens da tec e nacaj e aeul promovem parceria

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </section>
             <section id="tema">
                 <h1>Quem somos?</h1>
-                <p>Nós somos NACAJ, um grupo de jovens que se dedica em ajudar e apoiar.</p>
+                <p>Nós somos uma orgnização sem fins lucrativos de personalidade jurídica.</p>
             </section>
             <div id="box">
                 <div class="icon_box">
