--- a/paginas/activitieDetails/comemoracao1dejunho.html
+++ b/paginas/activitieDetails/comemoracao1dejunho.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../css/headerStyle.css">
 </head>
 <body>
-        <header>
+    <header>
         <section id="homePageHeader">
             <div id="homeLogo">
                 <img src="../../icones/logoNACAJalinhado.png" alt="">
@@ -17,24 +17,32 @@
             </div>
             <nav>
                 <ol id="nav-list" class="retracted">
-                    <a href="../index.html">
-                        <li>Home</li>
+                    <a href="../../index.html">
+                        <div class="list-icons">
+                            <img src="../../icones/dashboard_16181907.png" alt="">
+                            <li>Página Ínicial</li>
+                        </div>
                     </a>
-                    <a href="homeActivitiesPage.html">
-                        <li>Atividades</li>
+                    <a href="../homeActivitiesPage.html">
+                        <div class="list-icons">
+                            <img src="../../icones/checklist_7111148.png" alt="">
+                            <li>Atividades</li>
+                        </div>
                     </a>
-                    <a href="aboutPage.html">
-                        <li>About</li>
+                    <a href="../noticiasPage.html">
+                        <div class="list-icons">
+                            <img src="../../icones/world_2298220.png" alt="">
+                            <li>Noticias</li>
+                        </div>
                     </a>
                 </ol>
             </nav>
             <button id="menu">
-                <img src="../../icones/humburguer.png" alt="">
+                <div class="hamburguer"></div>
             </button>
         </section>
     </header>
 
     <script src="../../javascript/header.js"></script>
-    <script src="../../javascript/main.js"></script>
 </body>
 </html>
