--- a/paginas/homeActivitiesPage.html
+++ b/paginas/homeActivitiesPage.html
@@ -94,7 +94,7 @@
                             <h1>Comemoracao do dia 1 de junho</h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsum enim ut quisquam non maxime, eos tempore fugit velit. Eius vel magnam perspiciatis, aliquam eligendi dolores libero nulla cum dolore.</p>
                         </div>
-                        <a href="activitieDetails/limpezadomar.html">
+                        <a class="activities-link" href="activitieDetails/limpezadomar.html">
                             <button class="activities-button">
                                 <p>Ver atividade</p>
                             </button>
@@ -111,7 +111,7 @@
                             <h1>Comemoracao do dia 1 de junho</h1>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia odio ea maiores autem beatae corrupti, aliquid, eos soluta dolorem facilis quasi ipsa, veniam vero possimus blanditiis? Veniam, tempora tempore. Ea.</p>
                         </div>
-                        <a href="">
+                        <a class="activities-link" href="">
                             <button class="activities-button">
                                 <p>Ver atividade</p>
                             </button>
@@ -128,7 +128,7 @@
                             <h1>Comemoracao do dia 1 de junho</h1>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quidem excepturi molestias. Dolorum ad dolores nam ab, repudiandae atque at. Repudiandae quibusdam amet iste, optio accusantium ad adipisci iure consequatur!</p>
                         </div>
-                        <a href="activitieDetails/activitieDetails.html">
+                        <a class="activities-link" href="activitieDetails/activitieDetails.html">
                             <button class="activities-button">
                                 <p>Ver atividade</p>
                             </button>
@@ -145,7 +145,7 @@
                             <h1>Comemoracao do dia 1 de junho</h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In excepturi ipsa explicabo eius deserunt nemo quas omnis error maxime. Ipsam corrupti quaerat consequatur provident nostrum nesciunt dolore impedit fuga similique?</p>
                         </div>
-                        <a href="">
+                        <a class="activities-link" href="">
                             <button class="activities-button">
                                 <p>Ver atividade</p>
                             </button>
