--- a/paginas/noticiasPage.html
+++ b/paginas/noticiasPage.html
@@ -47,6 +47,34 @@
     
 
     <main>
+        <a href="noticiasDetails/NACAJ e AEUL promovem capacitação sobre liderança e activismo juvenil na Universidade Licungo.html" class="noticia-link">
+            <section class="noticia noticia-retraida">
+                <div class="noticia-componentes">
+                    <div class="noticia-imagem">
+                        <img src="../imagens/nacaj e aeul.jpg" alt="">
+                    </div>
+                    <div class="noticia-texto">
+                        <div class="texto">
+                            <h2>NOTÍCIA | NACAJ e AEUL promovem capacitação sobre liderança...</h2>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </a>
+        <a href="noticiasDetails/NACAJ RECEBE JOVENS DO PROJECTO TECJOVEM PARA FIRMAR PARCERIA EM FORMAÇÃO TÉCNICA.html" class="noticia-link">
+            <section class="noticia noticia-retraida">
+                <div class="noticia-componentes">
+                    <div class="noticia-imagem">
+                        <img src="../imagens/IMG-20250717-WA0014.jpg" alt="">
+                    </div>
+                    <div class="noticia-texto">
+                        <div class="texto">
+                            <h2>NACAJ RECEBE JOVENS DO PROJECTO TECJOVEM PARA FIRMAR PARCERIA...</h2>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </a>
         <a href="noticiasDetails/ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA.html" class="noticia-link">
             <section class="noticia noticia-retraida">
                 <div class="noticia-componentes">
