modificacao da imagem nacaj e aeul

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <section id="blur">
             </section>
             <section id="tema">
-                <h1>Quem somos?</h1>
-                <p>Nós somos uma orgnização sem fins lucrativos de personalidade jurídica.</p>
+                <h1>Bem-vindo</h1>
+                <p>Nós somos NACAJ uma orgnização sem fins lucrativos de personalidade jurídica.</p>
             </section>
             <div id="box">
                 <div class="icon_box">
