--- a/paginas/noticiasDetails/NACAJ e AEUL promovem capacitação sobre liderança e activismo juvenil na Universidade Licungo.html
+++ b/paginas/noticiasDetails/NACAJ e AEUL promovem capacitação sobre liderança e activismo juvenil na Universidade Licungo.html
@@ -53,7 +53,7 @@
     </header>
 
     <main>
-        <img src="../../imagens/IMG-20250705-WA0002.jpg" alt="">
+        <img src="../../imagens/nacaj e aeul.jpg" alt="">
 
         <section class="noticias-detalhadas">
             <div class="noticia-detalhes">
@@ -63,7 +63,7 @@
 
                 <div class="paragrafos">
                     <p>
-                        No dia 19 de Julho, sábado, o NACAJ – Núcleo de Apoio as Crianças, Adolescentes e Jovens – Quelimane, em parceria com a AEUL – Associação dos Estudantes da Universidade Licungo, realizou uma capacitação no Auditório Bloco II da Universidade Licungo.
+                        No dia 19 de Julho, sábado, o NACAJ (Núcleo de Apoio as Crianças, Adolescentes e Jovens – Quelimane), em parceria com a AEUL (Associação dos Estudantes da Universidade Licungo), realizou uma capacitação no Auditório Bloco II da Universidade Licungo.
                     </p>
                     <p>
                         O evento teve como tema central “História do NACAJ e Activismo Comunitário Juvenil, Liderança e Responsabilidade Social na Comunidade”. A sessão foi oficialmente aberta pelo Presidente Distrital do NACAJ, Onorio Da Silva, e pelo Presidente da AEUL.
