remocao da palavra noticia de uma noticia

--- a/paginas/noticiasPage.html
+++ b/paginas/noticiasPage.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="noticia-texto">
                         <div class="texto">
-                            <h2>NOTÍCIA | NACAJ e AEUL promovem capacitação sobre liderança...</h2>
+                            <h2>NACAJ e AEUL promovem capacitação sobre liderança...</h2>
                         </div>
                     </div>
                 </div>
