comecando a trbalhar na pagina de atividade detalhadas

--- a/paginas/activitieDetails/comemoracao1dejunho.html
+++ b/paginas/activitieDetails/comemoracao1dejunho.html
@@ -7,13 +7,20 @@
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/activitiesDetails.css">
     <link rel="stylesheet" href="../../css/headerStyle.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="../../css/innerHeader.css">
+    <script defer src="../../javascript/activities-detalhes.js"></script>
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">-->
 </head>
 <body>
     <header>
         <section id="homePageHeader">
+            <a href="../homeActivitiesPage.html">
+                <div class="seta-back">
+                    <div class="seta"></div>
+                </div>
+            </a>
             <div id="homeLogo">
                 <img src="../../icones/logoNACAJalinhado.png" alt="">
                 <h2>NACAJ</h2>
@@ -45,6 +52,28 @@
             </button>
         </section>
     </header>
+
+    <main>
+        <section class="grid">
+            <div class="img-principal">
+                <img src="../../imagens/1749555959361.jpg" class="imagem-Principal" alt="">
+            </div>
+            <div class="img-auxiliares">
+                <div class="item"><img src="../../imagens/1749555962025.jpg" alt=""></div>
+                <div class="item"><img src="../../imagens/1749555964931.jpg" alt=""></div>
+                <div class="item"><img src="../../imagens/1749555969642.jpg" alt=""></div>
+                <div class="item"><img src="../../imagens/1749555979506.jpg" alt=""></div>
+                <div class="item"><img src="../../imagens/1749556015438.jpg" alt=""></div>
+            </div>
+
+            <div class="visualizacao">
+            </div>
+            <div class="close-button closeNone">
+                <div class="x-button"></div>
+            </div>
+        </section>
+        
+    </main>
 
     <script src="../../javascript/header.js"></script>
 </body>
