--- a/paginas/homeActivitiesPage.html
+++ b/paginas/homeActivitiesPage.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <script defer src="../javascript/scrollBehaviors.js"></script>
 </head>
 <body>
     <header>
@@ -158,6 +159,10 @@
             </section>
            
         </section>
+
+        <button class="voltar-cima">
+            Back to top
+        </button>
     </main>
 
     <footer>
