--- a/paginas/noticiasDetails/DELEGAÇÃO DO NACAJ DE QUELIMANE PARTICIPOU DO TREINAMENTO.html
+++ b/paginas/noticiasDetails/DELEGAÇÃO DO NACAJ DE QUELIMANE PARTICIPOU DO TREINAMENTO.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NACAJ | Noticias</title>
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/noticias.css">
     <link rel="stylesheet" href="../../css/headerStyle.css">
