--- a/paginas/activitieDetails/comemoracao1dejunho.html
+++ b/paginas/activitieDetails/comemoracao1dejunho.html
@@ -55,9 +55,7 @@
 
     <main>
         <section class="grid">
-            <div class="img-principal">
-                <img src="../../imagens/1749555959361.jpg" class="i-principal" alt="">
-            </div>
+            <div class="img-principal"><img src="../../imagens/1749555959361.jpg" class="imagem-principal" alt=""></div>
             <div class="img-auxiliares">
                 <div class="item"><img src="../../imagens/1749555962025.jpg" alt=""></div>
                 <div class="item"><img src="../../imagens/1749555964931.jpg" alt=""></div>
@@ -66,7 +64,7 @@
                 <div class="item"><img src="../../imagens/1749556015438.jpg" alt=""></div>
             </div>
             <div class="backFilter">
-                
+
             </div>
             <div class="visualizacao">
             </div>
