imagem principal em tela cheia na galeria

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nacaj</title>
+    <title>NACAJ</title>
     <link rel="stylesheet" href="css/landingPage.css">
     <link rel="stylesheet" href="css/headerStyle.css">
     <link rel="stylesheet" href="css/reset.css">
@@ -15,6 +15,7 @@
 <body>
 
     <header id="cabecalho">
+        
         <section id="landingNavigation">
             <div id="landingLogo">
                 <img src="icones/logoNACAJalinhado.png" alt="">
