--- a/paginas/activitieDetails/comemoracao1dejunho.html
+++ b/paginas/activitieDetails/comemoracao1dejunho.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NACAJ</title>
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/activitiesDetails.css">
     <link rel="stylesheet" href="../../css/headerStyle.css">
@@ -54,6 +54,7 @@
     </header>
 
     <main>
+        
         <section class="grid">
             <div class="img-principal"><img src="../../imagens/1749555959361.jpg" class="imagem-principal" alt=""></div>
             <div class="img-auxiliares">
