trabalhando no cabecalho retratil e no menu fixo ao cabecalho

--- a/paginas/activitieDetails/comemoracao1dejunho.html
+++ b/paginas/activitieDetails/comemoracao1dejunho.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NACAJ</title>
+    <link rel="shortcut icon" href="../../icones/logoNACAJalinhado.png" type="image/x-icon">
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/activitiesDetails.css">
     <link rel="stylesheet" href="../../css/headerStyle.css">
@@ -15,7 +16,7 @@
 </head>
 <body>
     <header>
-        <section id="homePageHeader">
+        <section id="homePageHeader" class="header-visible">
             <a href="../homeActivitiesPage.html">
                 <div class="seta-back">
                     <div class="seta"></div>
@@ -72,6 +73,38 @@
             <div class="close-button closeNone">
                 <div class="x-button"></div>
             </div>
+
+            <div class="flutuante">
+                
+            </div>
+
+            <div class="random">
+                <input type="range" name="range" id="range" value="0" class="none" min="1", max="10">
+            </div>
+        </section>
+        <section>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+        </section>
+        <section>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+        </section>
+        <section>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+        </section>
+        <section>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+        </section>
+        <section>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+        </section>
+        <section>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+        </section>
+        <section>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+        </section>
+        <section>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
         </section>
         
     </main>
