--- a/paginas/noticiasDetails/ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA.html
+++ b/paginas/noticiasDetails/ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NACAJ | Noticias</title>
+    <link rel="shortcut icon" href="../../icones/logoNACAJalinhado.png" type="image/x-icon">
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/noticias.css">
     <link rel="stylesheet" href="../../css/innerHeader.css">
@@ -17,7 +18,7 @@
 <body>
 
     <header>
-        <section id="homePageHeader">
+        <section id="homePageHeader" class="header-visible">
             <a href="../noticiasPage.html">
                 <div class="seta-back">
                     <div class="seta"></div>
