--- a/paginas/noticiasPage.html
+++ b/paginas/noticiasPage.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <section id="homePageHeader">
+        <section id="homePageHeader"  class="header-visible">
             <div id="homeLogo">
                 <img src="../icones/logoNACAJalinhado.png" alt="">
                 <h2>NACAJ</h2>
