--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header id="cabecalho">
         
-        <section id="landingNavigation">
+        <section id="landingNavigation"  class="header-visible">
             <div id="landingLogo">
                 <img src="icones/logoNACAJalinhado.png" alt="">
                 <h2>NACAJ</h2>
