--- a/paginas/homeActivitiesPage.html
+++ b/paginas/homeActivitiesPage.html
@@ -16,38 +16,38 @@
     <script defer src="../javascript/scrollBehaviors.js"></script>-->
 </head>
 <body>
-    <header>
-        <section id="homePageHeader">
+    <header class="cabecalho">
+        <section id="homePageHeader" class="header-visible">
             <div id="homeLogo">
                 <img src="../icones/logoNACAJalinhado.png" alt="">
                 <h2>NACAJ</h2>
             </div>
-            <nav>
-                <ol id="nav-list" class="retracted">
-                    <a href="../index.html">
-                        <div class="list-icons">
-                            <img src="../icones/dashboard_16181907.png" alt="">
-                            <li>Página Inicial</li>
-                        </div>
-                    </a>
-                    <a href="homeActivitiesPage.html">
-                        <div class="list-icons">
-                            <img src="../icones/checklist_7111148.png" alt="">
-                            <li>Atividades</li>
-                        </div>
-                    </a>
-                    <a href="noticiasPage.html">
-                        <div class="list-icons">
-                            <img src="../icones/world_2298220.png" alt="">
-                            <li>Noticias</li>
-                        </div>
-                    </a>
-                </ol>
-            </nav>
             <button id="menu">
                 <div class="hamburguer"></div>
             </button>
         </section>
+        <nav>
+            <ol id="nav-list" class="retracted">
+                <a href="../index.html">
+                    <div class="list-icons">
+                        <img src="../icones/dashboard_16181907.png" alt="">
+                        <li>Página Inicial</li>
+                    </div>
+                </a>
+                <a href="homeActivitiesPage.html">
+                    <div class="list-icons">
+                        <img src="../icones/checklist_7111148.png" alt="">
+                        <li>Atividades</li>
+                    </div>
+                </a>
+                <a href="noticiasPage.html">
+                    <div class="list-icons">
+                        <img src="../icones/world_2298220.png" alt="">
+                        <li>Noticias</li>
+                    </div>
+                </a>
+            </ol>
+        </nav>
     </header>
 
     <main>
