noticia sobre fascin recebe carta de subsidio financeiro

--- a/paginas/noticiasPage.html
+++ b/paginas/noticiasPage.html
@@ -50,6 +50,20 @@
     
 
     <main>
+        <a href="noticiasDetails/FASCIN RECEBE CARTA DE SUBSÍDIO EM CERIMÓNIA HISTÓRICA.html" class="noticia-link">
+            <section class="noticia noticia-retraida">
+                <div class="noticia-componentes">
+                    <div class="noticia-imagem">
+                        <img src="../imagens/nacaj fascin subsidio.jpg" alt="">
+                    </div>
+                    <div class="noticia-texto">
+                        <div class="texto">
+                            <h2>FASCIN RECEBE CARTA DE SUBSÍDIO EM CERIMÓNIA HISTÓRICA...</h2>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </a>
         <a href="noticiasDetails/NACAJ e AEUL promovem capacitação sobre liderança e activismo juvenil na Universidade Licungo.html" class="noticia-link">
             <section class="noticia noticia-retraida">
                 <div class="noticia-componentes">
