--- a/paginas/activitieDetails/comemoracao1dejunho.html
+++ b/paginas/activitieDetails/comemoracao1dejunho.html
@@ -29,22 +29,22 @@
             <nav>
                 <ol id="nav-list" class="retracted">
                     <a href="../../index.html">
-                        <div class="list-icons">
+                        <li class="list-icons">
                             <img src="../../icones/dashboard_16181907.png" alt="">
-                            <li>Página Ínicial</li>
-                        </div>
+                            <p>Página Inicial</p>
+                        </li>
                     </a>
                     <a href="../homeActivitiesPage.html">
-                        <div class="list-icons">
+                        <li class="list-icons">
                             <img src="../../icones/checklist_7111148.png" alt="">
-                            <li>Atividades</li>
-                        </div>
+                            <p>Atividades</p>
+                        </li>
                     </a>
                     <a href="../noticiasPage.html">
-                        <div class="list-icons">
+                        <li class="list-icons">
                             <img src="../../icones/world_2298220.png" alt="">
-                            <li>Noticias</li>
-                        </div>
+                            <p>Noticias</p>
+                        </li>
                     </a>
                 </ol>
             </nav>
@@ -75,29 +75,36 @@
             </div>
 
         </section>
-        <section>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
-        </section>
-        <section>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
-        </section>
-        <section>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
-        </section>
-        <section>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
-        </section>
-        <section>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
-        </section>
-        <section>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
-        </section>
-        <section>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
-        </section>
-        <section>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+        <section class="detalhes-atividades">
+            <div class="detalhes">
+                <h1 class="titulo">Comemoracao do 1 de Junho</h1>
+                <div class="paragrafos">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+                    </section>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+                    </p>
+                </div>
+            </div>
         </section>
         
     </main>
