--- a/paginas/noticiasDetails/COMUNIDADE E GOVERNO SE ENCONTRAM EM NAMACURRA.html
+++ b/paginas/noticiasDetails/COMUNIDADE E GOVERNO SE ENCONTRAM EM NAMACURRA.html
@@ -28,22 +28,22 @@
             <nav>
                 <ol id="nav-list" class="retracted">
                     <a href="../../index.html">
-                        <div class="list-icons">
+                        <li class="list-icons">
                             <img src="../../icones/dashboard_16181907.png" alt="">
-                            <li>Página Inicial</li>
-                        </div>
+                            <p>Página Inicial</p>
+                        </li>
                     </a>
                     <a href="../homeActivitiesPage.html">
-                        <div class="list-icons">
+                        <li class="list-icons">
                             <img src="../../icones/checklist_7111148.png" alt="">
-                                                <li>Atividades</li>
-                        </div>
-                </a>
+                            <p>Atividades</p>
+                        </li>
+                    </a>
                     <a href="../noticiasPage.html">
-                        <div class="list-icons">
+                        <li class="list-icons">
                             <img src="../../icones/world_2298220.png" alt="">
-                            <li>Noticias</li>
-                        </div>
+                            <p>Noticias</p>
+                        </li>
                     </a>
                 </ol>
             </nav>
