--- a/paginas/homeActivitiesPage.html
+++ b/paginas/homeActivitiesPage.html
@@ -29,22 +29,22 @@
         <nav>
             <ol id="nav-list" class="retracted">
                 <a href="../index.html">
-                    <div class="list-icons">
+                    <li class="list-icons">
                         <img src="../icones/dashboard_16181907.png" alt="">
-                        <li>Página Inicial</li>
-                    </div>
+                        <p>Página Inicial</p>
+                    </li>
                 </a>
                 <a href="homeActivitiesPage.html">
-                    <div class="list-icons">
+                    <li class="list-icons">
                         <img src="../icones/checklist_7111148.png" alt="">
-                        <li>Atividades</li>
-                    </div>
+                        <p>Atividades</p>
+                    </li>
                 </a>
                 <a href="noticiasPage.html">
-                    <div class="list-icons">
+                    <li class="list-icons">
                         <img src="../icones/world_2298220.png" alt="">
-                        <li>Noticias</li>
-                    </div>
+                        <p>Noticias</p>
+                    </li>
                 </a>
             </ol>
         </nav>
@@ -159,12 +159,11 @@
             </section>
            
         </section>
-
-        <button class="voltar-cima">
-            Back to top
+        <button class="voltar-cima voltar-cima-visivel">
+            <div class="botao-voltar-cima"></div>
         </button>
     </main>
-
+    
     <footer>
         <p>© 2025 NACAJ</p>
     </footer>
