--- a/paginas/noticiasPage.html
+++ b/paginas/noticiasPage.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="../css/noticias.css">
     <link rel="shortcut icon" href="../icones/logoNACAJalinhado.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!--<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">-->
 </head>
 <body>
     <header>
@@ -23,24 +23,23 @@
             <nav>
                 <ol id="nav-list" class="retracted">
                     <a href="../index.html">
-                        <div class="list-icons">
-                            <img src="../icones/dashboard_16181907.png" alt="">
-                            <li>Página Inicial</li>
-                        </div>
-                    </a>
-                    <a href="homeActivitiesPage.html">
-                        <div class="list-icons">
-                            <img src="../icones/checklist_7111148.png" alt="">
-                                                <li>Atividades</li>
-                        </div>
+                    <li class="list-icons">
+                        <img src="../icones/dashboard_16181907.png" alt="">
+                        <p>Página Inicial</p>
+                    </li>
                 </a>
-                    <a href="noticiasPage.html">
-                        <div class="list-icons">
-                            <img src="../icones/world_2298220.png" alt="">
-                            <li>Noticias</li>
-                        </div>
-                    </a>
-                </ol>
+                <a href="homeActivitiesPage.html">
+                    <li class="list-icons">
+                        <img src="../icones/checklist_7111148.png" alt="">
+                        <p>Atividades</p>
+                    </li>
+                </a>
+                <a href="noticiasPage.html">
+                    <li class="list-icons">
+                        <img src="../icones/world_2298220.png" alt="">
+                        <p>Noticias</p>
+                    </li>
+                </a>
             </nav>
             <button id="menu">
                 <div class="hamburguer"></div>
@@ -166,6 +165,10 @@
                 </div>
             </section>
         </a>
+
+        <button class="voltar-cima voltar-cima-visivel">
+            <div class="botao-voltar-cima"></div>
+        </button>
     </main>
 
     <footer>
