--- a/paginas/homeActivitiesPage.html
+++ b/paginas/homeActivitiesPage.html
@@ -79,7 +79,7 @@
                     <div id="img-description">
                         <div class="description">
                             <h1>Comemoracao do dia 1 de junho</h1>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus hic amet voluptates nulla voluptatum eveniet quos officiis repudiandae deserunt ut. Asperiores accusamus placeat ullam quaerat perspiciatis ratione modi ipsum magnam.</p>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus hic amet voluptates nulla voluptatum...</p>
                         </div>
                         <a class="activities-link" href="activitieDetails/comemoracao1dejunho.html">
                             <button class="activities-button">
@@ -96,7 +96,7 @@
                     <div id="img-description">
                         <div class="description">
                             <h1>Comemoracao do dia 1 de junho</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsum enim ut quisquam non maxime, eos tempore fugit velit. Eius vel magnam perspiciatis, aliquam eligendi dolores libero nulla cum dolore.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsum enim ut quisquam non maxime, eos...</p>
                         </div>
                         <a class="activities-link" href="activitieDetails/limpezadomar.html">
                             <button class="activities-button">
@@ -113,7 +113,7 @@
                     <div id="img-description">
                         <div class="description">
                             <h1>Comemoracao do dia 1 de junho</h1>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia odio ea maiores autem beatae corrupti, aliquid, eos soluta dolorem facilis quasi ipsa, veniam vero possimus blanditiis? Veniam, tempora tempore. Ea.</p>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia odio ea maiores autem beatae corrupti, aliquid...</p>
                         </div>
                         <a class="activities-link" href="">
                             <button class="activities-button">
@@ -130,7 +130,7 @@
                     <div id="img-description">
                         <div class="description">
                             <h1>Comemoracao do dia 1 de junho</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quidem excepturi molestias. Dolorum ad dolores nam ab, repudiandae atque at. Repudiandae quibusdam amet iste, optio accusantium ad adipisci iure consequatur!</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quidem excepturi molestias...</p>
                         </div>
                         <a class="activities-link" href="activitieDetails/activitieDetails.html">
                             <button class="activities-button">
@@ -147,7 +147,7 @@
                     <div id="img-description">
                         <div class="description">
                             <h1>Comemoracao do dia 1 de junho</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In excepturi ipsa explicabo eius deserunt nemo quas omnis error maxime. Ipsam corrupti quaerat consequatur provident nostrum nesciunt dolore impedit fuga similique?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In excepturi ipsa explicabo eius deserunt nemo quas omnis error maxime. Ipsam corrupti...</p>
                         </div>
                         <a class="activities-link" href="">
                             <button class="activities-button">
